syntax = "proto3";

package trailbox.routes;

option go_package = "trailbox/gen/routes;routes";

import "common.proto";

service Routes {
  rpc GetRoute(trailbox.common.RouteId) returns (Route);
  rpc ListRoutes(ListRoutesRequest) returns (ListRoutesResponse);
}

message Route {
  string id = 1;
  string name = 2;
  double distance_km = 3;
  double elevation_gain = 4;
}

message ListRoutesRequest {}
message ListRoutesResponse {
  repeated Route routes = 1;
}
